2006-05-05  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>

	* src/conn.c: (async_cb):
	  Don't send an error on HUP (fixes bug #340747)

2006-03-17  Tim-Philipp Müller  <tim at centricular dot net>

	* examples/echoserver-unix.c: (main):
	  No need to re-invent g_strdup(), but if someone does
	  he better allocate enough space for the terminating NUL.

2005-12-10  Tim-Philipp Müller  <tim at centricular dot net>

	* doc/tmpl/conn-http.sgml:
	  Mention the need to define GNET_EXPERIMENTAL before
	  including gnet headers in the docs.

2005-11-30  Benjamin Lee  <benjamin dot lee at realthought dot net>

	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>

	* examples/echoserver-async.c: (async_client_iofunc):
	  Check for G_IO_OUT before checking for G_IO_IN, so that we
	  don't forget to send out the last chunk of bytes if we get
	  notified of a disconnect via G_IO_IN.

2005-11-16  Tim-Philipp Müller  <tim at centricular dot net>

	* src/base64.c:
	* src/md5.c:
	* src/sha.c:
	  const-ify some more arrays; fix potential signedness issue
	  in the md5/sha digest stringification code.

2005-11-16  Tim-Philipp Müller  <tim at centricular dot net>

	* NEWS:
	  Update
	  
	* src/base64.c:
	  Make table constant

2005-11-16  Tim-Philipp Müller  <tim at centricular dot net>

	* src/gnet-private.h:
	* src/inetaddr.c: (gnet_inetaddr_new_async),
	(inetaddr_new_async_cb):
	  Fix race condition in async DNS resolution code:
	  inetaddr_new_async_cb() might be called before
	  gnet_inetaddr_new_async() gets around to setting 
	  state->func and state->data (based on patch by
	  steve_morris@arcadyan.com).

2005-11-16  Tim-Philipp Müller  <tim at centricular dot net>

	* src/uri.c: (field_escape):
	  Fix URI escaping for characters from 0x80-0xff.

2005-11-15  Tim-Philipp Müller  <tim at centricular dot net>

	* NEWS:
	* configure.ac:
	* doc/gnet-sections.txt:
	* gnet.def:
	  Update for API addition.
